--- a/KnittingMachineController/KnittingMachineController.ioc
+++ b/KnittingMachineController/KnittingMachineController.ioc
@@ -122,6 +122,7 @@ NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
