--- a/KnittingMachineController/KnittingMachineController.ioc
+++ b/KnittingMachineController/KnittingMachineController.ioc
@@ -9,6 +9,7 @@ Mcu.IP11=TIM6
 Mcu.IP12=TIM7
 Mcu.IP13=TIM8
 Mcu.IP14=USART1
+Mcu.IP15=USART2
 Mcu.IP2=RCC
 Mcu.IP3=SDIO
 Mcu.IP4=SPI1
@@ -17,7 +18,7 @@ Mcu.IP6=TIM1
 Mcu.IP7=TIM2
 Mcu.IP8=TIM3
 Mcu.IP9=TIM4
-Mcu.IPNb=15
+Mcu.IPNb=16
 Mcu.Name=STM32F429I(E-G-I)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE2
@@ -35,72 +36,74 @@ Mcu.Pin19=PF10
 Mcu.Pin2=PE4
 Mcu.Pin20=PH0/OSC_IN
 Mcu.Pin21=PH1/OSC_OUT
-Mcu.Pin22=PA5
-Mcu.Pin23=PA6
-Mcu.Pin24=PA7
-Mcu.Pin25=PF11
-Mcu.Pin26=PF12
-Mcu.Pin27=PF13
-Mcu.Pin28=PF14
-Mcu.Pin29=PF15
+Mcu.Pin22=PA2
+Mcu.Pin23=PA3
+Mcu.Pin24=PA5
+Mcu.Pin25=PA6
+Mcu.Pin26=PA7
+Mcu.Pin27=PF11
+Mcu.Pin28=PF12
+Mcu.Pin29=PF13
 Mcu.Pin3=PE5
-Mcu.Pin30=PE7
-Mcu.Pin31=PE8
-Mcu.Pin32=PE9
-Mcu.Pin33=PE10
-Mcu.Pin34=PE11
-Mcu.Pin35=PE12
-Mcu.Pin36=PE13
-Mcu.Pin37=PE14
-Mcu.Pin38=PE15
-Mcu.Pin39=PC8
+Mcu.Pin30=PF14
+Mcu.Pin31=PF15
+Mcu.Pin32=PE7
+Mcu.Pin33=PE8
+Mcu.Pin34=PE9
+Mcu.Pin35=PE10
+Mcu.Pin36=PE11
+Mcu.Pin37=PE12
+Mcu.Pin38=PE13
+Mcu.Pin39=PE14
 Mcu.Pin4=PE6
-Mcu.Pin40=PC9
-Mcu.Pin41=PA9
-Mcu.Pin42=PA10
-Mcu.Pin43=PA13
-Mcu.Pin44=PI0
-Mcu.Pin45=PI1
-Mcu.Pin46=PI2
-Mcu.Pin47=PI3
-Mcu.Pin48=PA14
-Mcu.Pin49=PC10
+Mcu.Pin40=PE15
+Mcu.Pin41=PC8
+Mcu.Pin42=PC9
+Mcu.Pin43=PA9
+Mcu.Pin44=PA10
+Mcu.Pin45=PA13
+Mcu.Pin46=PI0
+Mcu.Pin47=PI1
+Mcu.Pin48=PI2
+Mcu.Pin49=PI3
 Mcu.Pin5=PI8
-Mcu.Pin50=PC11
-Mcu.Pin51=PC12
-Mcu.Pin52=PD2
-Mcu.Pin53=PD6
-Mcu.Pin54=PD7
-Mcu.Pin55=PG9
-Mcu.Pin56=PG10
-Mcu.Pin57=PG11
-Mcu.Pin58=PG12
-Mcu.Pin59=PG13
+Mcu.Pin50=PA14
+Mcu.Pin51=PC10
+Mcu.Pin52=PC11
+Mcu.Pin53=PC12
+Mcu.Pin54=PD2
+Mcu.Pin55=PD6
+Mcu.Pin56=PD7
+Mcu.Pin57=PG9
+Mcu.Pin58=PG10
+Mcu.Pin59=PG11
 Mcu.Pin6=PI9
-Mcu.Pin60=PG14
-Mcu.Pin61=PB3
-Mcu.Pin62=PB4
-Mcu.Pin63=PB5
-Mcu.Pin64=PE0
-Mcu.Pin65=PE1
-Mcu.Pin66=PI4
-Mcu.Pin67=PI5
-Mcu.Pin68=PI6
-Mcu.Pin69=PI7
+Mcu.Pin60=PG12
+Mcu.Pin61=PG13
+Mcu.Pin62=PG14
+Mcu.Pin63=PB3
+Mcu.Pin64=PB4
+Mcu.Pin65=PB5
+Mcu.Pin66=PE0
+Mcu.Pin67=PE1
+Mcu.Pin68=PI4
+Mcu.Pin69=PI5
 Mcu.Pin7=PI10
-Mcu.Pin70=VP_CRC_VS_CRC
-Mcu.Pin71=VP_SYS_VS_Systick
-Mcu.Pin72=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin73=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin74=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin75=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin76=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin77=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin78=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin79=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin70=PI6
+Mcu.Pin71=PI7
+Mcu.Pin72=VP_CRC_VS_CRC
+Mcu.Pin73=VP_SYS_VS_Systick
+Mcu.Pin74=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin75=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin76=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin77=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin78=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin79=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin8=PI11
+Mcu.Pin80=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin81=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin9=PF0
-Mcu.PinsNb=80
+Mcu.PinsNb=82
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
 MxCube.Version=4.15.1
@@ -130,6 +133,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -438,7 +445,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=C\:\\Projects\\KnittingMachineController\\KnittingMachineController
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_CRC_Init-CRC-false,3-MX_SDIO_SD_Init-SDIO-false,4-MX_SPI1_Init-SPI1-false,5-MX_TIM1_Init-TIM1-false,6-MX_TIM2_Init-TIM2-false,7-MX_TIM3_Init-TIM3-false,8-MX_TIM4_Init-TIM4-false,9-MX_TIM5_Init-TIM5-false,10-MX_TIM6_Init-TIM6-false,11-MX_TIM7_Init-TIM7-false,12-MX_TIM8_Init-TIM8-false,13-MX_USART1_UART_Init-USART1-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_CRC_Init-CRC-false,3-MX_SDIO_SD_Init-SDIO-false,4-MX_SPI1_Init-SPI1-false,5-MX_TIM1_Init-TIM1-false,6-MX_TIM2_Init-TIM2-false,7-MX_TIM3_Init-TIM3-false,8-MX_TIM4_Init-TIM4-false,9-MX_TIM5_Init-TIM5-false,10-MX_TIM6_Init-TIM6-false,11-MX_TIM7_Init-TIM7-false,12-MX_TIM8_Init-TIM8-false,13-MX_USART1_UART_Init-USART1-false,14-MX_USART2_UART_Init-USART2-false
 RCC.48MHZClocksFreq_Value=45000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -489,29 +496,29 @@ SPI1.CalculateBaudRate=45.0 MBits/s
 SPI1.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 TIM1.IPParameters=Prescaler,Period
-TIM1.Period=100
-TIM1.Prescaler=100
+TIM1.Period=1
+TIM1.Prescaler=5000
 TIM2.IPParameters=Prescaler,Period
-TIM2.Period=100
-TIM2.Prescaler=100
+TIM2.Period=1
+TIM2.Prescaler=2500
 TIM3.IPParameters=Prescaler,Period
-TIM3.Period=100
-TIM3.Prescaler=100
+TIM3.Period=1
+TIM3.Prescaler=2500
 TIM4.IPParameters=Prescaler,Period
-TIM4.Period=100
-TIM4.Prescaler=100
+TIM4.Period=1
+TIM4.Prescaler=2500
 TIM5.IPParameters=Prescaler,Period
-TIM5.Period=100
-TIM5.Prescaler=100
+TIM5.Period=1
+TIM5.Prescaler=2500
 TIM6.IPParameters=Prescaler,Period
-TIM6.Period=1000
-TIM6.Prescaler=1000
+TIM6.Period=1
+TIM6.Prescaler=2500
 TIM7.IPParameters=Prescaler,Period
-TIM7.Period=1000
-TIM7.Prescaler=1000
+TIM7.Period=1
+TIM7.Prescaler=2500
 TIM8.IPParameters=Prescaler,Period
-TIM8.Period=1000
-TIM8.Prescaler=1000
+TIM8.Period=1
+TIM8.Prescaler=5000
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_SYS_VS_Systick.Mode=SysTick
