--- a/KnittingMachineController/KnittingMachineController.ioc
+++ b/KnittingMachineController/KnittingMachineController.ioc
@@ -1,24 +1,54 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=SDIO_RX
+Dma.Request1=SDIO_TX
+Dma.RequestsNb=2
+Dma.SDIO_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SDIO_RX.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_RX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_RX.0.Instance=DMA2_Stream3
+Dma.SDIO_RX.0.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_RX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_RX.0.Mode=DMA_PFCTRL
+Dma.SDIO_RX.0.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SDIO_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SDIO_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_TX.1.Instance=DMA2_Stream6
+Dma.SDIO_TX.1.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_TX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_TX.1.Mode=DMA_PFCTRL
+Dma.SDIO_TX.1.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=CRC
-Mcu.IP1=NVIC
-Mcu.IP10=TIM5
-Mcu.IP11=TIM6
-Mcu.IP12=TIM7
-Mcu.IP13=TIM8
-Mcu.IP14=USART1
-Mcu.IP15=USART2
-Mcu.IP2=RCC
-Mcu.IP3=SDIO
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM2
-Mcu.IP8=TIM3
-Mcu.IP9=TIM4
-Mcu.IPNb=16
+Mcu.IP1=DMA
+Mcu.IP10=TIM4
+Mcu.IP11=TIM5
+Mcu.IP12=TIM6
+Mcu.IP13=TIM7
+Mcu.IP14=TIM8
+Mcu.IP15=USART1
+Mcu.IP16=USART2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SDIO
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM2
+Mcu.IP9=TIM3
+Mcu.IPNb=17
 Mcu.Name=STM32F429I(E-G-I)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE2
@@ -109,12 +139,15 @@ Mcu.UserName=STM32F429IGTx
 MxCube.Version=4.15.1
 MxDb.Version=DB.4.0.151
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
+NVIC.DMA2_Stream3_IRQn=true\:6\:0\:true\:false\:true
+NVIC.DMA2_Stream6_IRQn=true\:6\:0\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SDIO_IRQn=true\:5\:0\:true\:false\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true
@@ -122,8 +155,8 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:true\:false\:true
+NVIC.TIM7_IRQn=true\:0\:0\:true\:false\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
@@ -445,7 +478,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=C\:\\Projects\\KnittingMachineController\\KnittingMachineController
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_CRC_Init-CRC-false,3-MX_SDIO_SD_Init-SDIO-false,4-MX_SPI1_Init-SPI1-false,5-MX_TIM1_Init-TIM1-false,6-MX_TIM2_Init-TIM2-false,7-MX_TIM3_Init-TIM3-false,8-MX_TIM4_Init-TIM4-false,9-MX_TIM5_Init-TIM5-false,10-MX_TIM6_Init-TIM6-false,11-MX_TIM7_Init-TIM7-false,12-MX_TIM8_Init-TIM8-false,13-MX_USART1_UART_Init-USART1-false,14-MX_USART2_UART_Init-USART2-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_DMA_Init-DMA-false,3-MX_CRC_Init-CRC-false,4-MX_SDIO_SD_Init-SDIO-false,5-MX_SPI1_Init-SPI1-false,6-MX_TIM1_Init-TIM1-false,7-MX_TIM2_Init-TIM2-false,8-MX_TIM3_Init-TIM3-false,9-MX_TIM4_Init-TIM4-false,10-MX_TIM5_Init-TIM5-false,11-MX_TIM6_Init-TIM6-false,12-MX_TIM7_Init-TIM7-false,13-MX_TIM8_Init-TIM8-false,14-MX_USART1_UART_Init-USART1-false,15-MX_USART2_UART_Init-USART2-false
 RCC.48MHZClocksFreq_Value=45000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
