--- a/KnittingMachineController/KnittingMachineController.ioc
+++ b/KnittingMachineController/KnittingMachineController.ioc
@@ -53,87 +53,67 @@ Mcu.Name=STM32F429I(E-G-I)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PF1
-Mcu.Pin11=PF2
-Mcu.Pin12=PF3
-Mcu.Pin13=PF4
-Mcu.Pin14=PF5
-Mcu.Pin15=PF6
-Mcu.Pin16=PF7
-Mcu.Pin17=PF8
-Mcu.Pin18=PF9
-Mcu.Pin19=PF10
+Mcu.Pin10=PF8
+Mcu.Pin11=PF9
+Mcu.Pin12=PF10
+Mcu.Pin13=PH0/OSC_IN
+Mcu.Pin14=PH1/OSC_OUT
+Mcu.Pin15=PA2
+Mcu.Pin16=PA3
+Mcu.Pin17=PA5
+Mcu.Pin18=PA6
+Mcu.Pin19=PA7
 Mcu.Pin2=PE4
-Mcu.Pin20=PH0/OSC_IN
-Mcu.Pin21=PH1/OSC_OUT
-Mcu.Pin22=PA2
-Mcu.Pin23=PA3
-Mcu.Pin24=PA5
-Mcu.Pin25=PA6
-Mcu.Pin26=PA7
-Mcu.Pin27=PF11
-Mcu.Pin28=PF12
-Mcu.Pin29=PF13
+Mcu.Pin20=PC4
+Mcu.Pin21=PC5
+Mcu.Pin22=PB0
+Mcu.Pin23=PB1
+Mcu.Pin24=PH8
+Mcu.Pin25=PC8
+Mcu.Pin26=PC9
+Mcu.Pin27=PA9
+Mcu.Pin28=PA10
+Mcu.Pin29=PA13
 Mcu.Pin3=PE5
-Mcu.Pin30=PF14
-Mcu.Pin31=PF15
-Mcu.Pin32=PE7
-Mcu.Pin33=PE8
-Mcu.Pin34=PE9
-Mcu.Pin35=PE10
-Mcu.Pin36=PE11
-Mcu.Pin37=PE12
-Mcu.Pin38=PE13
-Mcu.Pin39=PE14
+Mcu.Pin30=PI0
+Mcu.Pin31=PI1
+Mcu.Pin32=PI2
+Mcu.Pin33=PA14
+Mcu.Pin34=PC10
+Mcu.Pin35=PC11
+Mcu.Pin36=PC12
+Mcu.Pin37=PD2
+Mcu.Pin38=PD3
+Mcu.Pin39=PD4
 Mcu.Pin4=PE6
-Mcu.Pin40=PE15
-Mcu.Pin41=PC8
-Mcu.Pin42=PC9
-Mcu.Pin43=PA9
-Mcu.Pin44=PA10
-Mcu.Pin45=PA13
-Mcu.Pin46=PI0
-Mcu.Pin47=PI1
-Mcu.Pin48=PI2
-Mcu.Pin49=PI3
-Mcu.Pin5=PI8
-Mcu.Pin50=PA14
-Mcu.Pin51=PC10
-Mcu.Pin52=PC11
-Mcu.Pin53=PC12
-Mcu.Pin54=PD2
-Mcu.Pin55=PD6
-Mcu.Pin56=PD7
-Mcu.Pin57=PG9
-Mcu.Pin58=PG10
-Mcu.Pin59=PG11
-Mcu.Pin6=PI9
-Mcu.Pin60=PG12
-Mcu.Pin61=PG13
-Mcu.Pin62=PG14
-Mcu.Pin63=PB3
-Mcu.Pin64=PB4
-Mcu.Pin65=PB5
-Mcu.Pin66=PE0
-Mcu.Pin67=PE1
-Mcu.Pin68=PI4
-Mcu.Pin69=PI5
-Mcu.Pin7=PI10
-Mcu.Pin70=PI6
-Mcu.Pin71=PI7
-Mcu.Pin72=VP_CRC_VS_CRC
-Mcu.Pin73=VP_SYS_VS_Systick
-Mcu.Pin74=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin75=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin76=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin77=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin78=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin79=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin8=PI11
-Mcu.Pin80=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin81=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin9=PF0
-Mcu.PinsNb=82
+Mcu.Pin40=PD5
+Mcu.Pin41=PD6
+Mcu.Pin42=PD7
+Mcu.Pin43=PG9
+Mcu.Pin44=PG10
+Mcu.Pin45=PG11
+Mcu.Pin46=PG12
+Mcu.Pin47=PG13
+Mcu.Pin48=PG14
+Mcu.Pin49=PB3
+Mcu.Pin5=PI9
+Mcu.Pin50=PB4
+Mcu.Pin51=PB5
+Mcu.Pin52=VP_CRC_VS_CRC
+Mcu.Pin53=VP_SYS_VS_Systick
+Mcu.Pin54=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin59=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin6=PI10
+Mcu.Pin60=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin61=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin7=PI11
+Mcu.Pin8=PF6
+Mcu.Pin9=PF7
+Mcu.PinsNb=62
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
 MxCube.Version=4.15.1
@@ -178,6 +158,16 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Speed,GPIO_Label
+PB0.GPIO_Label=Motor6 Dir
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Speed,GPIO_Label
+PB1.GPIO_Label=Motor7 Dir
+PB1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Speed,GPIO_Label
 PB3.GPIO_Label=Relay Data
 PB3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -199,6 +189,16 @@ PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDIO_D3
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.Signal=SDIO_CK
+PC4.GPIOParameters=GPIO_Speed,GPIO_Label
+PC4.GPIO_Label=Motor4 Dir
+PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC4.Locked=true
+PC4.Signal=GPIO_Output
+PC5.GPIOParameters=GPIO_Speed,GPIO_Label
+PC5.GPIO_Label=Motor5 Dir
+PC5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC5.Locked=true
+PC5.Signal=GPIO_Output
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
 PC9.Mode=SD_4_bits_Wide_bus
@@ -214,54 +214,31 @@ PCC.Temperature=25
 PCC.Vdd=null
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDIO_CMD
-PD6.GPIOParameters=GPIO_PuPd
+PD3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD3.GPIO_Label=Motor1 Limt Start
+PD3.GPIO_PuPd=GPIO_PULLUP
+PD3.Locked=true
+PD3.Signal=GPIO_Input
+PD4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD4.GPIO_Label=Motor1 Limt End
+PD4.GPIO_PuPd=GPIO_PULLUP
+PD4.Locked=true
+PD4.Signal=GPIO_Input
+PD5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD5.GPIO_Label=Motor4 Limt End
+PD5.GPIO_PuPd=GPIO_PULLUP
+PD5.Locked=true
+PD5.Signal=GPIO_Input
+PD6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD6.GPIO_Label=Motor5 Limt Start
 PD6.GPIO_PuPd=GPIO_PULLUP
 PD6.Locked=true
 PD6.Signal=GPIO_Input
-PD7.GPIOParameters=GPIO_PuPd
+PD7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD7.GPIO_Label=Motor5 Limt End
 PD7.GPIO_PuPd=GPIO_PULLUP
 PD7.Locked=true
 PD7.Signal=GPIO_Input
-PE0.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE0.GPIO_Label=Motor1 Limt Start
-PE0.GPIO_PuPd=GPIO_PULLUP
-PE0.Locked=true
-PE0.Signal=GPIO_Input
-PE1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE1.GPIO_Label=Motor1 Limt End
-PE1.GPIO_PuPd=GPIO_PULLUP
-PE1.Locked=true
-PE1.Signal=GPIO_Input
-PE10.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE10.GPIO_Label=Motor6 Limt Start
-PE10.GPIO_PuPd=GPIO_PULLUP
-PE10.Locked=true
-PE10.Signal=GPIO_Input
-PE11.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE11.GPIO_Label=Motor6 Limt End
-PE11.GPIO_PuPd=GPIO_PULLUP
-PE11.Locked=true
-PE11.Signal=GPIO_Input
-PE12.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE12.GPIO_Label=Motor7 Limt Start
-PE12.GPIO_PuPd=GPIO_PULLUP
-PE12.Locked=true
-PE12.Signal=GPIO_Input
-PE13.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE13.GPIO_Label=Motor7 Limt End
-PE13.GPIO_PuPd=GPIO_PULLUP
-PE13.Locked=true
-PE13.Signal=GPIO_Input
-PE14.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE14.GPIO_Label=Motor8 Limt Start
-PE14.GPIO_PuPd=GPIO_PULLUP
-PE14.Locked=true
-PE14.Signal=GPIO_Input
-PE15.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE15.GPIO_Label=Motor8 Limt End
-PE15.GPIO_PuPd=GPIO_PULLUP
-PE15.Locked=true
-PE15.Signal=GPIO_Input
 PE2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE2.GPIO_Label=Motor2 Limt Start
 PE2.GPIO_PuPd=GPIO_PULLUP
@@ -287,81 +264,11 @@ PE6.GPIO_Label=Motor4 Limt Start
 PE6.GPIO_PuPd=GPIO_PULLUP
 PE6.Locked=true
 PE6.Signal=GPIO_Input
-PE7.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE7.GPIO_Label=Motor4 Limt End
-PE7.GPIO_PuPd=GPIO_PULLUP
-PE7.Locked=true
-PE7.Signal=GPIO_Input
-PE8.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE8.GPIO_Label=Motor5 Limt Start
-PE8.GPIO_PuPd=GPIO_PULLUP
-PE8.Locked=true
-PE8.Signal=GPIO_Input
-PE9.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE9.GPIO_Label=Motor5 Limt End
-PE9.GPIO_PuPd=GPIO_PULLUP
-PE9.Locked=true
-PE9.Signal=GPIO_Input
-PF0.GPIOParameters=GPIO_Speed,GPIO_Label
-PF0.GPIO_Label=Motor1 PWM
-PF0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF0.Locked=true
-PF0.Signal=GPIO_Output
-PF1.GPIOParameters=GPIO_Speed,GPIO_Label
-PF1.GPIO_Label=Motor2 PWM
-PF1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF1.Locked=true
-PF1.Signal=GPIO_Output
 PF10.GPIOParameters=GPIO_Speed,GPIO_Label
 PF10.GPIO_Label=Motor3 Dir
 PF10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF10.Locked=true
 PF10.Signal=GPIO_Output
-PF11.GPIOParameters=GPIO_Speed,GPIO_Label
-PF11.GPIO_Label=Motor4 Dir
-PF11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF11.Locked=true
-PF11.Signal=GPIO_Output
-PF12.GPIOParameters=GPIO_Speed,GPIO_Label
-PF12.GPIO_Label=Motor5 Dir
-PF12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF12.Locked=true
-PF12.Signal=GPIO_Output
-PF13.GPIOParameters=GPIO_Speed,GPIO_Label
-PF13.GPIO_Label=Motor6 Dir
-PF13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF13.Locked=true
-PF13.Signal=GPIO_Output
-PF14.GPIOParameters=GPIO_Speed,GPIO_Label
-PF14.GPIO_Label=Motor7 Dir
-PF14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF14.Locked=true
-PF14.Signal=GPIO_Output
-PF15.GPIOParameters=GPIO_Speed,GPIO_Label
-PF15.GPIO_Label=Motor8 Dir
-PF15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF15.Locked=true
-PF15.Signal=GPIO_Output
-PF2.GPIOParameters=GPIO_Speed,GPIO_Label
-PF2.GPIO_Label=Motor3 PWM
-PF2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF2.Locked=true
-PF2.Signal=GPIO_Output
-PF3.GPIOParameters=GPIO_Speed,GPIO_Label
-PF3.GPIO_Label=Motor4 PWM
-PF3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF3.Locked=true
-PF3.Signal=GPIO_Output
-PF4.GPIOParameters=GPIO_Speed,GPIO_Label
-PF4.GPIO_Label=Motor5 PWM
-PF4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF4.Locked=true
-PF4.Signal=GPIO_Output
-PF5.GPIOParameters=GPIO_Speed,GPIO_Label
-PF5.GPIO_Label=Motor6 PWM
-PF5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF5.Locked=true
-PF5.Signal=GPIO_Output
 PF6.GPIOParameters=GPIO_Speed,GPIO_Label
 PF6.GPIO_Label=Motor7 PWM
 PF6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -382,27 +289,33 @@ PF9.GPIO_Label=Motor2 Dir
 PF9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF9.Locked=true
 PF9.Signal=GPIO_Output
-PG10.GPIOParameters=GPIO_PuPd
+PG10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG10.GPIO_Label=Motor6 Limt End
 PG10.GPIO_PuPd=GPIO_PULLUP
 PG10.Locked=true
 PG10.Signal=GPIO_Input
-PG11.GPIOParameters=GPIO_PuPd
+PG11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG11.GPIO_Label=Motor7 Limt Start
 PG11.GPIO_PuPd=GPIO_PULLUP
 PG11.Locked=true
 PG11.Signal=GPIO_Input
-PG12.GPIOParameters=GPIO_PuPd
+PG12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG12.GPIO_Label=Motor7 Limt End
 PG12.GPIO_PuPd=GPIO_PULLUP
 PG12.Locked=true
 PG12.Signal=GPIO_Input
-PG13.GPIOParameters=GPIO_PuPd
+PG13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG13.GPIO_Label=Motor8 Limt Start
 PG13.GPIO_PuPd=GPIO_PULLUP
 PG13.Locked=true
 PG13.Signal=GPIO_Input
-PG14.GPIOParameters=GPIO_PuPd
+PG14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG14.GPIO_Label=Motor8 Limt End
 PG14.GPIO_PuPd=GPIO_PULLUP
 PG14.Locked=true
 PG14.Signal=GPIO_Input
-PG9.GPIOParameters=GPIO_PuPd
+PG9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG9.GPIO_Label=Motor6 Limt Start
 PG9.GPIO_PuPd=GPIO_PULLUP
 PG9.Locked=true
 PG9.Signal=GPIO_Input
@@ -410,49 +323,38 @@ PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
-PI0.GPIOParameters=GPIO_Speed
+PH8.GPIOParameters=GPIO_Speed,GPIO_Label
+PH8.GPIO_Label=Motor8 Dir
+PH8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PH8.Locked=true
+PH8.Signal=GPIO_Output
+PI0.GPIOParameters=GPIO_Speed,GPIO_Label
+PI0.GPIO_Label=Motor1 PWM
 PI0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI0.Locked=true
 PI0.Signal=GPIO_Output
-PI1.GPIOParameters=GPIO_Speed
+PI1.GPIOParameters=GPIO_Speed,GPIO_Label
+PI1.GPIO_Label=Motor2 PWM
 PI1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI1.Locked=true
 PI1.Signal=GPIO_Output
-PI10.GPIOParameters=GPIO_Speed
+PI10.GPIOParameters=GPIO_Speed,GPIO_Label
+PI10.GPIO_Label=Motor5 PWM
 PI10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI10.Locked=true
 PI10.Signal=GPIO_Output
-PI11.GPIOParameters=GPIO_Speed
+PI11.GPIOParameters=GPIO_Speed,GPIO_Label
+PI11.GPIO_Label=Motor6 PWM
 PI11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI11.Locked=true
 PI11.Signal=GPIO_Output
-PI2.GPIOParameters=GPIO_Speed
+PI2.GPIOParameters=GPIO_Speed,GPIO_Label
+PI2.GPIO_Label=Motor3 PWM
 PI2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI2.Locked=true
 PI2.Signal=GPIO_Output
-PI3.GPIOParameters=GPIO_Speed
-PI3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PI3.Locked=true
-PI3.Signal=GPIO_Output
-PI4.GPIOParameters=GPIO_Speed
-PI4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PI4.Locked=true
-PI4.Signal=GPIO_Output
-PI5.GPIOParameters=GPIO_Speed
-PI5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PI5.Locked=true
-PI5.Signal=GPIO_Output
-PI6.GPIOParameters=GPIO_Speed
-PI6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PI6.Locked=true
-PI6.Signal=GPIO_Output
-PI7.GPIOParameters=GPIO_Speed
-PI7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PI7.Locked=true
-PI7.Signal=GPIO_Output
-PI8.Locked=true
-PI8.Signal=GPIO_Output
-PI9.GPIOParameters=GPIO_Speed
+PI9.GPIOParameters=GPIO_Speed,GPIO_Label
+PI9.GPIO_Label=Motor4 PWM
 PI9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI9.Locked=true
 PI9.Signal=GPIO_Output
