--- a/KnittingMachineController/KnittingMachineController.ioc
+++ b/KnittingMachineController/KnittingMachineController.ioc
@@ -140,22 +140,36 @@ NVIC.TIM7_IRQn=true\:0\:0\:true\:false\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=USART1_LCD_RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=USART2_DEBUG_TX
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=USART2_DEBUG_RX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=SPI1_SD2_SCK
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=SPI1_SD2_MISO
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=SPI1_SD2_MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=USART1_LCD_TX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -183,10 +197,16 @@ PB5.GPIO_Label=Relay LAT
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=SDIO_SD1_D2
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDIO_D2
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=SDIO_SD1_D3
 PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDIO_D3
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=SDIO_SD1_CK
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.Signal=SDIO_CK
 PC4.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -199,8 +219,12 @@ PC5.GPIO_Label=Motor5 Dir
 PC5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC5.Locked=true
 PC5.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=SDIO_SD1_D0
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=SDIO_SD1_D1
 PC9.Mode=SD_4_bits_Wide_bus
 PC9.Signal=SDIO_D1
 PCC.Checker=false
@@ -212,6 +236,8 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=null
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=SDIO_SD1_CMD
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDIO_CMD
 PD3.GPIOParameters=GPIO_PuPd,GPIO_Label
